--- a/DockerSampleConfig.yaml
+++ b/DockerSampleConfig.yaml
@@ -18,7 +18,7 @@ spec:
         ports:
         - containerPort: 8080
       imagePullSecrets:
-      - name: dsconfigsn
+      - name: kubernetes12cn
 
 ---
 apiVersion: v1
