--- a/kubernetesdepl.yaml
+++ b/kubernetesdepl.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubernetes-deployment
+  name: kubernetesdepl
 spec:
   replicas: 1
   selector:
